Update company logos, fix colors
Signed-off-by: Anastassios Nanos <ananos@nubificus.co.uk>

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -20,8 +20,10 @@ html {
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #fffff8;
-    // color: #fff;
+    //background-color: #eeeee8;
+    background-color: $bg;
+    //color: #444;
+    color: $fg;
 }
 body {
     margin: 0;
