--- a/_sass/vars.scss
+++ b/_sass/vars.scss
@@ -23,12 +23,15 @@ $color5: #eeeeee;
 //$color5: #bdd1c5;
 //$color6: #9daaa2;
 
+$color1: #f7dad9;
+$color2: #fff5ea;
+$color3: #d6d2c4;
+$color4: #968c83;
 
 
-
-$bg: $color5;
-$fg: $color3;
-$accent: $color3;
+$bg: $color4;
+$fg: $color2;
+$accent: $color1;
 
 /*
  * Build Variables, don't touch
