Update colors, fix some typos, finalize
Signed-off-by: Anastassios Nanos <ananos@nubificus.co.uk>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,8 +87,8 @@
                 {{ content }}
                 {% if site.footer == true %}
                 <hr />
-                <p style="text-align: center; margin-bottom: 10px">
-                    <a href="{{ site.footer_url }}" style="color: black"><small>{{ site.footer_text }}</small></a>
+                <p class="footer" style="text-align: center; margin-bottom: 10px;">
+                    <a class="footer" href="{{ site.footer_url }}" style="text-decoration: none;" >{{ site.footer_text }}</a>
                 </p>
                 {% endif %}
             </div>
