--- a/_sass/vars.scss
+++ b/_sass/vars.scss
@@ -28,8 +28,12 @@ $color2: #fff5ea;
 $color3: #d6d2c4;
 $color4: #968c83;
 
+$color1: #2b2b2b;
+$color2: #474747;
+$color3: #c1c7c9;
 
-$bg: $color4;
+
+$bg: $color3;
 $fg: $color2;
 $accent: $color1;
 
